# gossip-sim

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Graph.cpp  Graph.h  Node.cpp  Node.h  Opts.cpp  Opts.h  Simulator.cpp  Simulator.h  main.cpp
util/: generate_gif.py  inject_message.py  requirements.txt
